syntax = "proto3";


package user.v1;

option go_package = "kratos/api/user/v1;v1";

// 用户信息
message User {
  int32 id = 1;
  string user_name = 2;
  string user_nickname = 3;
  int32 department = 4;
  string mobile = 5;
  string email = 6;
  string password = 7;
  string gender = 8;
  int32 role = 9;
  string user_status = 10;
  string comment = 11;
}

// 用户注册请求（支持DTM分布式事务）
message RegisterRequest {
  string user_name = 1;
  string user_nickname = 2;
  int32 department = 3;
  string mobile = 4;
  string email = 5;
  string password = 6;
  string gender = 7;
  int32 role = 8;
  string comment = 9;
  string dtm_gid = 10; // DTM全局事务ID
}

message RegisterReply {
  int32 id = 1;
}

// 用户注册补偿请求（DTM分布式事务）
message RegisterCompensateRequest {
  int32 id = 1;
  string dtm_gid = 2;
}

message RegisterCompensateReply {
  bool success = 1;
}

// 用户登录
message LoginRequest {
  string user_name = 1;
  string password = 2;
}

message LoginReply {
  int32 id = 1;
  string user_name = 2;
  string token = 3;
}

// 用户查询
message GetUserRequest {
  int32 id = 1;
}

message GetUserReply {
  User user = 1;
}

// 用户列表
message ListUserRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListUserReply {
  repeated User users = 1;
  int32 total = 2;
}

// 用户更新
message UpdateUserRequest {
  int32 id = 1;
  string user_nickname = 2;
  int32 department = 3;
  string mobile = 4;
  string email = 5;
  string gender = 6;
  int32 role = 7;
  string user_status = 8;
  string comment = 9;
}

message UpdateUserReply {
  bool success = 1;
}

// 用户删除
message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserReply {
  bool success = 1;
}

// 用户服务
service UserService {
  rpc Register(RegisterRequest) returns (RegisterReply);
  rpc RegisterCompensate(RegisterCompensateRequest) returns (RegisterCompensateReply);
  rpc Login(LoginRequest) returns (LoginReply);
  rpc GetUser(GetUserRequest) returns (GetUserReply);
  rpc ListUser(ListUserRequest) returns (ListUserReply);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserReply);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserReply);
} 